# lightyear_backend

./: Cargo.toml  README.md  tailwind.config.js
admin_cli/: Cargo.toml
admin_cli/src/: main.rs
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: edgegap.rs  game.rs  mod.rs  spawn.rs
edgegap_client/: Cargo.toml  README.md
edgegap_client/.openapi-generator/: FILES
edgegap_client/docs/: ActiveDeploymentTelemetryGetResult.md  ActiveDeploymentTelemetryRequest.md  ActiveDeploymentTelemetryResponse.md  ActiveDeploymentTelemetryScore.md  ApiModelContainercrashdata.md  ApiModelContainerlogs.md  ApiModelDeploymentfilter.md  ApiModelLocation.md  ApiModelLocationbeacon.md  AppVersionCreateResponse.md  AppVersionCreateSessionConfig.md  AppVersionDelete.md  AppVersionEnv.md  AppVersionList.md  AppVersionPayload.md  AppVersionPort.md  AppVersionProbe.md  AppVersionUpdatePayload.md  AppVersionUpdateResponse.md  AppVersionUpdateSessionConfig.md  AppVersionWhitelistEntry.md  AppVersionWhitelistEntryPayload.md  AppVersionWhitelistEntrySuccess.md  AppVersionWhitelistResponse.md  Application.md  ApplicationPatch.md  ApplicationPost.md  Applications.md  ApplicationsApi.md  BaseModel.md  BulkSessionDelete.md  BulkSessionPost.md  ClientRelayPort.md  ComponentCredentials.md  ContainerLogStorageModel.md  ContextApi.md  ContextDeploymentTagResponse.md  CustomBulkSessionModel.md  CustomBulkSessionsModel.md  CustomSessionDeleteModel.md  (+150 more)
frontend/: Cargo.toml
frontend/src/: lib.rs
game/: Cargo.toml
game/src/: lib.rs
public/: game.js  game_bg.wasm
server/: Cargo.toml
(+198 files in other folders)
