[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightyear = "0.14.1"
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

tokio = { version = "1.33.0", features = ["full"], optional = true }
edgegap = { version = "0.1.0", path = "../edgegap_client" }
serde = "1.0.130"
bytes = "1.5.0"

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true


[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:tokio"]